--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ pytest==8.3.4
 numpy==2.2.1
 torchvision==0.20.1
 coverage==7.6.10
+pytorch-lightning==2.5.0.post0
+hydra-core==1.3.2
+wandb==0.19.3
+timm==1.0.13
