Added ruff code formatting to GitHub actions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,3 +38,8 @@ jobs:
         run: |
           coverage run -m pytest tests/
           coverage report -m
+
+      - name: Ruff check
+        run: ruff check .
+      - name: Ruff format
+        run: ruff format .
