--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.12", "3.11"]
 
     steps:
       - name: Checkout code
@@ -23,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.11
           cache: 'pip'
           cache-dependency-path: setup.py
 
@@ -39,7 +38,5 @@ jobs:
           coverage run -m pytest tests/
           coverage report -m
 
-      - name: Ruff formatting check
-        run: ruff check .
       - name: Ruff format
         run: ruff format .
