--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+googleapiclient
+
 data/
 outputs/
 models/
