--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-torch=>2.2.2
+torch>=2.2.2
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
 invoke==2.2.0
 ruff==0.9.2
 pytest==8.3.4
-numpy=>2.0.2
-torchvision=>0.17.2
+numpy>=2.0.2
+torchvision>=0.17.2
 coverage==7.6.10
 pytorch-lightning==2.5.0.post0
 hydra-core==1.3.2
