--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,3 +19,5 @@ availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/default-json/versions/latest
     env: 'DEFAULT_JSON'
+options:
+  logging: CLOUD_LOGGING_ONLY
