--- a/configs/sweep.yaml
+++ b/configs/sweep.yaml
@@ -3,7 +3,7 @@ command:
   - src/mlops_project/train.py
 program: src/mlops_project/train.py
 name: sweep_hyperparam_optimization
-project: mnist_project
+project: mlops_project
 method: bayes  # Options: grid, random, bayes
 metric:
   name: train_loss  # Metric to minimize/maximize
@@ -11,9 +11,9 @@ metric:
 parameters:
   lr:
     distribution: log_uniform_values
-    min: 0.001
-    max: 0.1
+    min: 0.0001
+    max: 0.01
   batch_size:
-    values: [16, 32, 64]
+    values: [8, 16, 32]
   epochs:
-    values: [4, 8]
+    values: [8, 12, 16]
