--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -57,4 +57,4 @@ jobs:
       uses: google-github-actions/setup-gcloud@v2
 
     - name: Submit build
-      run: gcloud builds submit . --config cloudbuild.yaml
+      run: gcloud builds submit . --config configs/cloudbuild.yaml
