--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ torch==2.5.1
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
-numpy==2.2.2
+numpy==2.0.2 
 torchvision==0.20.1
 pytorch-lightning==2.5.0.post0
 hydra-core==1.3.2
@@ -12,3 +12,14 @@ python-dotenv==1.0.1
 Pillow==11.1.0
 dvc[gdrive]==3.59.0
 dvc-gs==3.0.1
+pandas==2.2.3
+requests==2.32.3
+fastapi==0.115.6
+uvicorn==0.34.0
+evidently==0.5.1
+anyio==4.8.0
+google-api-python-client==2.159.0
+google-cloud-storage==2.19.0
+pydantic==2.10.5
+transformers==4.48.1
+python-multipart==0.0.20
