--- a/configs/cloudbuild.yaml
+++ b/configs/cloudbuild.yaml
@@ -22,19 +22,19 @@ steps:
   args: [
     'build',
     '.',
-    '--build-arg', 'DEFAULT_JSON=$$DEFAULT_JSON',
     '-t',
     'europe-west1-docker.pkg.dev/deft-gearbox-447811-p4/dtu-mlops-project/gcp_app:latest',
     '-f',
     'dockerfiles/api.dockerfile'
   ]
+  secretEnv: ['secrets']
+
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push container image'
   args: [
     'push',
     'europe-west1-docker.pkg.dev/deft-gearbox-447811-p4/dtu-mlops-project/gcp_app:latest'
   ]
-  secretEnv: ['DEFAULT_JSON']
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'Deploy to Cloud Run'
   args: [
@@ -52,5 +52,7 @@ availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/default-json/versions/latest
     env: 'DEFAULT_JSON'
+  - versionName: projects/deft-gearbox-447811-p4/secrets/secrets/versions/latest
+    env: 'secrets'
 options:
   logging: CLOUD_LOGGING_ONLY
